--- a/aula_2/index.html
+++ b/aula_2/index.html
@@ -20,6 +20,113 @@
             Reza é pra quem tem fé nas lendas que vêm de lá <br>
             Reza pra proteger tudo nesse lugar <br>
         </p>
+        <p>
+        <!-- tag de formatação de texto -->
+        <!-- Negrito -->
+        <b> Minha frase em negrito! </b> <br>
+        <!-- Itálico-->
+        <i> Minha frase em itálico! </i> <br>
+        <!-- Deixar a palavra forte -->
+        <strong> Minha frase forte!  </strong> <br>
+        <!-- Deixar a palavra fraca -->
+        <small> Minha frase pequena! </small> <br>
+        Minha frase normal! <br>
+        <!-- Subliar a frase -->
+        <u> Minha frase sublinhada</u> <br>
+        <!-- Deixar a frase tachada-->
+        <s> Minha frase tachada </s> <br>
+        </p>
+        <!-- Listas -->
+
+        <h1> Lista ordenada </h1>
+        <ol>
+            <li> Comprar pão </li>
+            <li> Fazer o café </li>
+            <li> Me alimentar </li>
+        </ol>
+
+        <h2> Lista ordenada a partir de um nº desejado </h2>
+        <ol start="5">
+            <li> Estudar </li>
+            <li> Montar um portifólio </li>
+            <li> Arrumar um emprego </li>
+        </ol>
+
+        <h2> Lista por ordem alfabética </h2>
+        <ol type="A">
+            <li> Estudar </li>
+            <li> Montar um portifólio </li>
+            <li> Arrumar um emprego </li>
+        </ol>
+
+        <h2> Lista ordenada por algarismos romamos </h2>
+        <ol type="I">
+            <li> Estudar </li>
+            <li> Montar um portifólio </li>
+            <li> Arrumar um emprego </li>
+        </ol>
+
+        <h2> Lista ordenada </h2>
+        <ul>
+            <li> Estudar </li>
+            <li> Montar um portifólio </li>
+            <li> Arrumar um emprego </li>
+        </ul>
+
+        <h2> Lista ordenada quadradinhos </h2>
+        <ul type="square">
+            <li> Estudar </li>
+            <li> Montar um portifólio </li>
+            <li> Arrumar um emprego </li>
+        </ul>
+
+        <h2> Lista ordenada circulo vazado </h2>
+        <ul type="circle">
+            <li> Estudar </li>
+            <li> Montar um portifólio </li>
+            <li> Arrumar um emprego </li>
+        </ul>
+
+        <h1> Tabelas </h1>
+        <table border="1">
+            <!-- tabelas semânticas-->
+            <!-- cabeçalho da tabela -->
+            <thead>
+                <!-- corpo da tabela -->
+                <tr> 
+                <th> Título 1 </th> 
+                <th> Título 2 </th> 
+                <th> Título 3 </th> 
+                </tr>
+            </thead>
+            <tbody> 
+                <tr>
+                    <td> body 1 coluna 1 </td>
+                    <td> body 2 coluna 2 </td>
+                    <td> body 3 coluna 3 </td>
+                </tr>
+                <tr>
+                    <td> body 1 coluna 1 </td>
+                    <td> body 2 coluna 2 </td>
+                    <td> body 3 coluna 3 </td>
+                </tr>
+                <tr>
+                    <td> body 1 coluna 1 </td>
+                    <td> body 2 coluna 2 </td>
+                    <td> body 3 coluna 3 </td>
+                </tr>
+            </tbody>
+        </table>
+
+        <h1> Inserindo Imagens </h1>
+        <img src="img/Viola.jpg"/> 
         
+    
+
+
+
+
+
+
     </body>
 </html> 
