--- a/aula_2/index.html
+++ b/aula_2/index.html
@@ -119,13 +119,32 @@
         </table>
 
         <h1> Inserindo Imagens </h1>
-        <img src="img/Viola.jpg"/> 
+        <img src="img/Viola.jpg"/> <br>
+
+        <a href="https://www.bbc.com/portuguese/resources/idt-sh/lutapelaabolicao" target="_blank"> BBC </a>
+
+        <h1> Formulários </h1>
+
+        <form>
+            <table> Nome: </table> <br>
+            <input type=" text"/>
+            <br>
+            <label> E-mail: </label> <br>
+            <input type="E-mail"/> 
+            <br>
+            <label> Senha </label> <br>
+            <input type="password"/>
+            <br>
+            <label> Mensagem </label>
+            <textarea></textarea>
+            <br>
+            <button type="submit"> Enviar</button>
+
+
+
+        </form>
+
         
-    
-
-
-
-
 
 
     </body>
